# randfile

./: CODEOWNERS  CONTRIBUTING.md  Cargo.toml  license  readme.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
tests/: cli.rs
