[package]
name = "randfile"
version = "0.1.0"
edition = "2021"
authors = ["Andre Guerra <agu3rra@proton.me>"]
license = "MIT"
repository = "https://github.com/agu3rra/randfile"
description = "A binary that randomly selects a file in a target directory."
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="3", features=["derive", "cargo"] }
rand = { version="0" }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"